--- a/index.html
+++ b/index.html
@@ -6,13 +6,7 @@
     <title>Collaboration software for software, IT and business teams</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="static/css/style.css" />
-    <link
-      link
-      rel="icon"
-      type="image/x-icon"
-      href="static/images/safari-pinned-tab.svg"
-      style="color: #59afe1"
-    />
+    <link rel="icon" type="image/x-icon" href="static/images/safari-pinned-tab.svg" style="color: #59afe1"/>
   </head>
   <body>
     <header>
@@ -34,9 +28,9 @@
         </div>
       </div>
       <div class="trynow">
-        <a href="#"> <button class="trynow-btn">Try Now</button></a>
+        <a href="#"> <button name="try" class="trynow-btn" onclick="document.write('Hi!!!!')">Try Now</button></a>
         <a href="#" style="margin-left: 10px">
-          <button class="buynow-btn">Buy Now</button>
+          <button class="buynow-btn" onclick=f()>Buy Now</button>
         </a>
         <img src="static/images/search.svg" />
         <a style="margin-top: 5px"
@@ -45,10 +39,10 @@
         ></a>
       </div>
     </header>
-    <div id="content">
+    <div class="content">
       <h1 class="teamwork">
         It's possible
-        <p class="withteam">with teamwork</p>
+        <p id="with-team">with teamwork</p>
       </h1>
       <div class="right-content">
         <img
@@ -62,7 +56,7 @@
         <div class="lift-end">
           <img src="static/images/Team23_Official_white_Large.svg" alt="team '23"/>
           <div>
-            <p class="context">
+            <p id="context">
               Hear that? It’s team harmony. Learn how to tackle the impossible at Team ‘23, April 18–20.
             </p>
           </div>
@@ -78,13 +72,13 @@
       </p>
     </div>
     <div class="work-btn">
-      <a href="#" class="center-btn"
+      <a class="center-btn"
         ><button class="btn-blue">Work Management</button></a
       >
-      <a href="#" class="center-btn"
+      <a class="center-btn"
         ><button class="btn-blue">IT Service Management</button></a
       >
-      <a href="#" class="center-btn"
+      <a class="center-btn"
         ><button class="btn-blue">Agile and Devops</button></a
       >
     </div>
@@ -133,7 +127,7 @@
         <p>
           TEAM ESSENTIALS
         </p>
-        <h2>
+        <h2 id="exp-res">
           Explore resources to unleash the potential of your team
         </h2>
       </div>
@@ -145,8 +139,8 @@
         <p>
           Connect globally and meet locally to get more out of our products.
         </p>
-        <a href="#" class="search-frm">Search the forum</a>
-        <a href="#" class="join-com">Join our community</a>
+        <a class="search-frm">Search the forum</a>
+        <a class="join-com">Join our community</a>
       </div>
     </div>
     <div class="container-2">
@@ -154,5 +148,44 @@
         <img src="static/images/Blog_360x265@2x.jpg" alt="">
       </div>
     </div>
+    <script>
+      window.alert("welcome to web!!!")
+      const ele=document.getElementsByClassName('asian-community-text').length;
+      const elem=document.getElementsByClassName('asian-community-text');
+      elem[0].style.backgroundColor="#3DE";
+      document.getElementById('with-team').innerHTML = 'Hello World!!';
+      document.getElementById('with-team').innerHTML= ele;
+      const b=document.getElementsByName('try');
+      let arr=document.getElementsByTagName("*");
+      let tag=""
+      for (let i=0; i<arr.length;i++)
+      {
+        tag += arr[i].tagName+"<br/>";
+      }
+      document.getElementById('exp-res').innerHTML = tag;
+      b[0].style.backgroundColor="";
+      let a=10;
+      function f()
+      {
+        document.getElementById('with-team').innerHTML = "Hello!!!!"
+        if (true)
+        {
+          let b=23;
+          console.log(b);
+        }
+        console.log(a);
+        console.log(b);
+        console.log(a>>b);
+      }
+      f();
+      function myFun(p1,p2)
+      {
+        return p1+p2;
+      }
+      const person={name:"Sachin",age:42,lastName:"Tendulkar",runs:18000};
+      let x=myFun(4,5);
+      let text="The sum of two numbers:" + x;
+      document.getElementById("with-team").innerHTML = "God of Cricket is "+ person.name + person.lastName + " He has " + person.runs+ " International Runs.";
+    </script>
   </body>
 </html>
