jQuery Learning and Form Validation Using Javascript

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="static/css/style.css" />
     <link rel="icon" type="image/x-icon" href="static/images/safari-pinned-tab.svg" style="color: #59afe1"/>
     <script src="static/js/text.js"></script>
+    <script src="static/js/jQuery.min.js"></script>
   </head>
   <body>
     <header>
@@ -252,7 +253,7 @@
               <ul>
                 <p>RESOURCES</p>
                 <li class="li-pro">
-                  <a href="">Technical Support</a><br/></li>
+                  <a id="tech-support">Technical Support</a><br/></li>
                 <li class="li-pro">
                   <a href="">Purchasing & licensing</a><br/>
                 </li>
@@ -332,11 +333,11 @@
       </div>
       <hr/>
       <div class="footer-social">
-        <img src="learning/static/images/icons8-earth-globe-30.png" alt="globe"/>
+        <img src="static/images/globe.png" alt="globe"/>
         <div class="social-content">
           <a href="">English
           </a>
-          <img src="learning/static/images/down-arrow-svgrepo-com.svg" alt="arrow"/>
+          <img src="static/images/down-arrow-svgrepo-com.svg" alt="arrow"/>
         </div>
         <div class="social-content">
           <a href="">Privacy policy
@@ -359,13 +360,13 @@
           </a>
         </div>
         <div class="social-icon">
-          <a href=""><img src="learning/static/images/facebook-badge.svg" alt="facebook">
+          <a href=""><img src="static/images/facebook-badge.svg" alt="facebook">
           </a>
-          <a href=""><img src="learning/static/images/facebook-badge.svg" alt="twitter">
+          <a href=""><img src="static/images/facebook-badge.svg" alt="twitter">
           </a>
-          <a href=""><img src="learning/static/images/facebook-badge.svg" alt="linkdin">
+          <a href=""><img src="static/images/facebook-badge.svg" alt="linkdin">
           </a>
-          <a href=""><img src="learning/static/images/facebook-badge.svg" alt="youtube">
+          <a href=""><img src="static/images/facebook-badge.svg" alt="youtube">
           </a>
         </div>
       </div>
